Fixing issue with z-index on TransactionNotifications

--- a/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
+++ b/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
@@ -9,6 +9,7 @@
   height:100%;
   left: 0;
   top: 0;
+  z-index:2;
 }
 
 :local(.group) {
